style: :bug: CODE REFACTOR
removing extra margins from the design

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -6,6 +6,7 @@
   --color-text-primary: #15202A;
   --color-button-primary: #4C7BF3;
   --color-button-hover: #256db6;
+  --color-button-shadow: #4C7BF33B;
   --color-border-light: #C2D3FF;
 }
 
@@ -26,7 +27,7 @@ body {
   display: flex;
   flex-direction: column;
   align-items: center;
-  padding: 80px 20px;
+  padding: 80px 0 49px 0;
   max-width: 800px;
   margin: 0 auto;
 }
@@ -67,9 +68,9 @@ body {
 .form {
   display: flex;
   justify-content: center;
-  gap: 10px;
+  gap: 16px;
   max-width: 637px;
-  margin: 0 auto 40px;
+  margin: 0 auto 50px;
 }
 
 .form__input {
@@ -82,18 +83,22 @@ body {
 }
 
 .form__button {
-  padding: 12px 20px;
+  padding: 19px 62px;
   font-size: 16px;
-  color: #fff;
+  font-weight: 600;
+  color: var(--color-white);
   background-color: var(--color-button-primary);
-  border: none;
-  border-radius: 4px;
+  border: 1px var(--color-button-primary) solid;
+  border-radius: 28px;
   cursor: pointer;
-  transition: background 0.3s ease;
+  box-shadow: 0px 5px 10px 2px var(--color-button-shadow);
+  transition: background 0.4s ease;
 }
 
 .form__button:hover {
-  background-color: var(--color-button-hover);
+  background-color: transparent;
+  color: var(--color-text-primary);
+  border: 1px var(--color-text-primary) solid;
 }
 
 .preview {
@@ -107,18 +112,19 @@ body {
   width: 100%;
   display: flex;
   justify-content: center;
-  padding-top: 20px;
+  margin-bottom: 72px;
+  /* padding-top: 20px; */
 }
 
 .main__image {
+  max-width: 640px;
   width: 100%;
   border-radius: 8px;
   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-  max-width: 600px;
 }
 
 .page__footer {
-  margin-top: 50px;
+  /* margin-top: 50px; */
 }
 
 .footer__social {
